ingress-nginx/authelia/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia
  namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authelia
  template:
    metadata:
      labels:
        app: authelia
    spec:
      enableServiceLinks: false
      volumes:
        - name: authelia-config
          projected:
            sources:
              - secret:
                  name: authelia-users
                  items:
                    - key: users.yaml
                      path: users.yaml
              - configMap:
                  name: authelia-custom
                  items:
                    - key: custom.yaml
                      path: custom.yaml
        - name: authelia-secrets
          secret:
            secretName: authelia-secrets
      containers:
        - name: authelia
          image: ghcr.io/authelia/authelia:4.37.1
          # image: alpine
          ports:
            - name: http-authelia
              containerPort: 9091
          volumeMounts:
            - name: authelia-config
              mountPath: /config
              readOnly: true
            - name: authelia-secrets
              mountPath: /secrets
              readOnly: true
          # command: ["sleep"]
          # args: ["10000000"]
          command: ["authelia"]
          args: ["--config", "/config/custom.yaml"]

          resources:
            requests:
              cpu: "500m"
              memory: 2Gi
            limits:
              memory: 2Gi

          livenessProbe:
            httpGet:
              path: /
              port: 9091
            periodSeconds: 15
            initialDelaySeconds: 15
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6

          readinessProbe:
            httpGet:
              path: /
              port: 9091
            periodSeconds: 15
            initialDelaySeconds: 15
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
