ingress-nginx/authelia/networkpolicy.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: authelia
  namespace: ingress-nginx
spec:
  podSelector:
    matchLabels:
      app: authelia
  ingress:
    - ports:
        - port: http-authelia
      from:
        - namespaceSelector:
            matchLabels:
              name: ingress-nginx
